src/main/webapp/static/css/buttons.css
@CHARSET "UTF-8";

.css_button {
	 width: 180px;
    font-size: 16px;
    font-family: Arial;
    font-weight: normal;
    text-decoration: inherit;
    -webkit-border-radius: 8px 8px 8px 8px;
    -moz-border-radius: 8px 8px 8px 8px;
    border-radius: 8px 8px 8px 8px;
    border: 1px solid #3866A3;
    padding: 80px 50px;
    text-shadow: 1px 1px 0px #5E5E5E;
    -webkit-box-shadow: inset 1px 1px 0px 0px #BEE2F9;
    -moz-box-shadow: inset 1px 1px 0px 0px #BEE2F9;
    box-shadow: inset 1px 1px 0px 0px #BEE2F9;
    cursor: pointer;
    color: #FFFFFF;
    display: inline-block;
    background: -webkit-linear-gradient(90deg, #468ccf 5%, #63b8ee 100%);
    background: -moz-linear-gradient(90deg, #468ccf 5%, #63b8ee 100%);
    background: -ms-linear-gradient(90deg, #468ccf 5%, #63b8ee 100%);
    background: linear-gradient(180deg, #63b8ee 5%, #468ccf 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#63b8ee",endColorstr="#468ccf");
}
#btn1 {
	background: url('../images/Java_Logo.jpg');
	background-size:cover;
	background-repeat:no-repeat;
	background-position: center center;
}
#btn2 {
	background: url('../images/android-logo.jpg');
	background-size:cover;
	background-repeat:no-repeat;
	background-position: center center;
}
 #btn3 {
	background: url('../images/php_fesh_logo.png');
	background-size:cover;
	background-repeat:no-repeat;
	background-position: center center;
}
#btn4 {
	background: url('../images/javascript_logo.png');
	background-size:cover;
	background-repeat:no-repeat;
	background-position: center center;
} 
#btn5 {
	width:400px;
	height:150px;
	background: url('../images/forum.png');
	background-size:cover;
	background-repeat:no-repeat;
	background-position: center center;
} 
#btn6 {
	width:400px;
	height:150px;
	background: url('/TalentHub/src/main/webapp/static/images/groups.jpg');
	background-size:cover;
	background-repeat:no-repeat;
	background-position: center center;
} 

.css_button:hover {
    background: -webkit-linear-gradient(90deg, #63b8ee 5%, #468ccf 100%);
    background: -moz-linear-gradient(90deg, #63b8ee 5%, #468ccf 100%);
    background: -ms-linear-gradient(90deg, #63b8ee 5%, #468ccf 100%);
    background: linear-gradient(180deg, #468ccf 5%, #63b8ee 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#468ccf",endColorstr="#63b8ee");
}

.css_button:active {
    position:relative;
    top: 1px;
}

.css_button:first-of-type {
	margin-right: 20px;
}

.button-container {
	width: 400px;
    margin: 50px auto;
}
.button-container2 {
	width: auto;
    margin: 200px auto;
}

